@@ -17,6 +17,16 @@
   // a RAM-drive or a SSD device for performance reasons.
   "IndexDirectory" : "OrthancStorage",
 
+  // Path to the directory where Orthanc stores its large temporary
+  // files. The corresponding filesystem must be properly sized, given
+  // that for instance a ZIP archive of DICOM images created by a job
+  // can weight several GBs, and that there might be up to
+  // "JobsHistorySize" archives to be stored simultaneously. If not
+  // set, Orthanc will use the default temporary folder of the
+  // operating system (such as "/tmp/" on UNIX-like systems, or
+  // "C:/Temp" on Microsoft Windows).
+  // "TemporaryDirectory" : "/tmp/Orthanc/",
+
   // Enable the transparent compression of the DICOM instances
   "StorageCompression" : false,
 
